--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,10 +1,18 @@
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e0e0e0;
+  font-family: Roboto, sans-serif;
+}
+
 .app-container {
   display: flex;
-  min-height: 100vh;
-  font-family: Roboto, sans-serif;
+  width: 1200px;
   flex-direction: column;
   background-color: #fafafa;
   align-items: center;
+  padding-bottom: 40px;
 }
 
 .logo {
@@ -18,7 +26,7 @@
 .nav-container {
   display: flex;
   width: 100%;
-  height: 100px;
+  height: 90px;
   flex-direction: column;
   background-color: #fafafa;
   align-items: center;
@@ -42,4 +50,115 @@
 
 .nav-button {
   font-size: 15px;
+}
+
+.instructions-container, .gluten-free-container, .in-the-news-container, .community-container {
+  display: flex;
+  width: 80%;
+  height: 100%;
+  word-break: break-all;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.instructions-button, .gluten-free-button, .in-the-news-button, .community-button {
+  width: 20%;
+  height: 150px;
+  padding: 20px;
+  margin: 15px;
+  text-align: center;
+  word-break: keep-all;
+  background-color: rgba(98, 65, 37, 0.914);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 10%;
+}
+
+.instructions-button:hover, .gluten-free-button:hover, .in-the-news-button:hover, .community-button:hover {
+  background-color: rgba(98, 65, 37, 0.832);
+}
+
+.instructions-button-title, .gluten-free-button-title, .in-the-news-button-title, .community-button-title {
+  font-size: 24px;
+  font-weight: 800;
+  color: #fafafa;
+  margin: 5px 0 10px 0;
+}
+
+.instructions-button-description, .gluten-free-button-description, .in-the-news-button-description, .community-button-description {
+  font-size: 18px;
+  font-weight: 200;
+  color: #fafafa;
+}
+
+.footer-container {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  background-color: #e0e0e0;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  padding: 40px;
+}
+
+.footer-line-1 {
+  font-size: 40px;
+  color: #fafafa;
+  font-weight: 200;
+  margin-bottom: 5px;
+  background-color: rgba(98, 65, 37, 0.832);
+  width: 25%;
+  text-align: center;
+}
+
+.footer-line-2 {
+  font-size: 20px;
+  font-weight: 200;
+  margin-bottom: 15px;
+}
+
+.footer-email-signup {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.footer-social-links{
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.footer-line-3 {
+  font-size: 20px;
+  font-weight: 200;
+  margin-bottom: 5px;
+}
+
+.footer-line-4 {
+  font-size: 20px;
+  font-weight: 200;
+  margin-bottom: 5px;
+}
+
+.footer-line-5 {
+  font-size: 20px;
+  font-weight: 200;
+  margin-bottom: 5px;
+}
+
+.footer-line-6 {
+  font-size: 20px;
+  font-weight: 200;
+  margin-bottom: 5px;
 }
