--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,21 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+$base: #5a5b5c;
+$background: #fafafa;
+$darkbrown: #24180e;
+$brown: #c89e72;
+$width: 1000px;
+$title: 'Oswald', sans-serif;
+$body: 'Open Sans', sans-serif;
+
 .app {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #e0e0e0;
+  background-color: $base;
   font-family: Roboto, sans-serif;
   height: 100%;
-  min-height: 100vh
+  min-height: 100vh;
+  min-width: $width;
+  font-family: $body;
 }
 
 .app-container {
   display: flex;
-  width: 1200px;
+  width: $width;
   flex-direction: column;
-  background-color: #fafafa;
+  background-color: $background;
   align-items: center;
   height: 100%;
-  min-height: 100vh
+  min-height: 100vh;
+  box-shadow: 0px 0px 40px -5px rgba(0, 0, 0, 0.75);
 }
 
 .logo {
@@ -39,7 +53,7 @@
   width: 666px;
   height: 1px;
   margin-bottom: 20px;
-  background-color: #e0e0e0;
+  background-color: $body;
 }
 
 .nav-buttons-container {
@@ -51,7 +65,7 @@
 }
 
 .nav-button {
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .home-container {
@@ -66,29 +80,35 @@
 .home-banner {
   width: 100%;
   height: 400px;
-  background-color: rgba(98, 65, 37, 0.8);
+  background-color: $brown;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: $title;
+}
+
+.home-banner-text {
+  background-color: $background;
+  width: 100%;
 }
 
 .home-banner-line-1 {
-  font-size: 40px;
-  color: #fafafa;
-  margin-bottom: 20px;
+  font-size: 30px;
+  color: $background;
+  font-weight: 100;
 }
 
 .home-banner-line-2 {
   font-weight: bold;
-  font-size: 50px;
-  margin-bottom: 20px;
-  color: #fafafa;
+  font-size: 60px;
+  margin-bottom: 10px;
+  color: $background;
 }
 
 .home-banner-line-3 {
   font-size: 20px;
-  color: #fafafa;
+  color: $background;
 }
 
 .home-read-more {
@@ -119,7 +139,7 @@
   font-size: 40px;
   height: 100%;
   font-weight: bold;
-  background-color: rgba(98, 65, 37, 0.8);
+  background-color: $brown;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -134,7 +154,7 @@
 
 .home-read-more-button {
   font-size: 20px;
-  background-color: rgba(98, 65, 37, 0.9);
+  background-color: $brown;
   height: 60px;
   padding: 20px;
   display: flex;
@@ -143,11 +163,11 @@
   justify-content: center;
   border-radius: 17px;
   width: 200px;
-  color: #fafafa;
+  color: $background;
 }
 
 .home-read-more-button:hover {
-  background-color: rgba(98, 65, 37, 0.8);
+  background-color: $brown;
 }
 
 .home-talent {
@@ -192,7 +212,7 @@
   margin: 15px;
   text-align: center;
   word-break: keep-all;
-  background-color: rgba(98, 65, 37, 0.9);
+  background-color: $brown;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -201,20 +221,20 @@
 }
 
 .instructions-button:hover, .gluten-free-button:hover, .in-the-news-button:hover, .community-button:hover {
-  background-color: rgba(98, 65, 37, 0.8);
+  background-color: $brown;
 }
 
 .instructions-button-title, .gluten-free-button-title, .in-the-news-button-title, .community-button-title {
   font-size: 24px;
   font-weight: 800;
-  color: #fafafa;
+  color: $background;
   margin: 5px 0 10px 0;
 }
 
 .instructions-button-description, .gluten-free-button-description, .in-the-news-button-description, .community-button-description {
   font-size: 18px;
   font-weight: 200;
-  color: #fafafa;
+  color: $background;
 }
 
 .footer-container {
@@ -226,14 +246,23 @@
   padding: 40px;
 }
 
+.footer-subscribe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 .footer-line-1 {
   font-size: 40px;
-  color: #fafafa;
+  color: $background;
   font-weight: 200;
   margin-bottom: 5px;
-  background-color: rgba(98, 65, 37, 0.8);
-  width: 25%;
+  background-color: $brown;
   text-align: center;
+  width: 100%;
+  padding: 5px 10px 5px 10px;
 }
 
 .footer-line-2 {
@@ -251,11 +280,14 @@
 }
 
 .footer-email-signup-input {
-  background-color: #e0e0e0
+  background-color: $body;
+  height: 30px;
+  width: 400px;
+  border:1px solid $darkbrown;
 }
 
 .footer-email-signup-input:placeholder-shown {
-  color: #fafafa;
+  color: $background;
 }
 
 .footer-email-signup-input:placeholder-shown:focus {
@@ -264,7 +296,7 @@
 
 .footer-email-signup-button {
   font-size: 20px;
-  background-color: rgba(98, 65, 37, 0.9);
+  background-color: $brown;
   height: 60px;
   padding: 20px;
   display: flex;
@@ -273,7 +305,7 @@
   justify-content: center;
   border-radius: 17px;
   width: 200px;
-  color: #fafafa;
+  color: $background;
 }
 
 .footer-social-links{
