--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -2,9 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
 
 $base: #9a9a9a;
-$background: #fafafa;
+$background: #f5f3f0;
+$bannertext: rgba(250, 250, 250, 1);
 $darkbrown: #3e2a1a;
 $brown: #c89e72;
+$banner: rgba(200, 158, 114, 0.75);
 $width: 1200px;
 $title: 'Oswald', sans-serif;
 $body: 'Open Sans', sans-serif;
@@ -79,7 +81,17 @@ $body: 'Open Sans', sans-serif;
 .home-banner {
   width: 100%;
   height: 400px;
-  background-color: $brown;
+  display: flex;
+  background-size: cover;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-banner-color {
+  width: 100%;
+  height: 100%;
+  background-color: $banner;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -87,14 +99,14 @@ $body: 'Open Sans', sans-serif;
 }
 
 .home-banner-text {
-  background-color: $background;
+  background-color: $bannertext;
   width: 600px;
   height: 250px;
+  font-family: $title;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: $title;
 }
 
 .home-banner-line-1 {
